############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

0.0.6
+++++

CHANGES
-------

* Now relies on subunit 0.0.8 or better and testtools 0.9.15 or better.

IMPROVEMENTS
------------

* Much better handling of unicode input from subunit streams.  Specifically,
  we won't crash when we can't figure something out.  (Francesco Banconi,
  Martin Packman, #955006)

* Parallel tests now record their worker thread number as tags in tests.
  This makes identifying test ordering problems much easier.
  (Benji York, #974622)

* Python2.7 changed the interface for DBM, this has been worked around.
  (Robert Collins, #775214, #961103)

* Subunit 0.0.7 Changes its TestResultFilter implementation, requiring the
  subclass in testrepository.filter to be come more robust.
  (Robert Collins)

* A horrible thinko in the testrepository test suite came to light and has been
  fixed. How the tests ever ran is a mystery. (Robert Collins, #881497)

* ''failing'', ''run'' and ''load'' now both take a ''--subunit'' option, which
  displays output in raw subunit format.  If ''--full-results'' is passed too,
  then all subunit information is displayed.  (Brad Crittenden, #949950)

* Setting ''filter_tags'' in ''.testr.conf'' will cause tests tagged with those
  tags to be hidden unless the fail/error. This requires Subunit 0.0.8. If
  an older version of subunit is configured, testr will return an error.
  (Robert Collins, #914166)

* ``testr`` will drop into PDB from its command line UI if the environment
  variable TESTR_PDB is set. (Robert Collins)

* Test partitioning now handles a corner case where multiple tests have a
  reported duration of 0. Previously they could all accumulate into one
  partition, now they split across partitions (the length of a partition is
  used as a tie breaker if two partitions have the same duration).
  (Robert Collins, #914359)
